--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SEO Internal Linker</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Main Container -->
   <div class="container">
 
-    <!-- SECTION 1: Input -->
+    <!-- SECTION 1  INPUT -->
     <section class="section input-section" id="input-section">
       <div class="left-panel">
         <img src="https://raw.githubusercontent.com/bala-gowtham/seo-internal-linker/main/repute-logo-white-01.png" alt="Repute Logo" class="logo" />
         <h1>SEO Internal Linker</h1>
-        <p>Enter details & generate SEO-friendly internal links. Preview and iterate instantly.</p>
+        <p>Enter details &amp; generate SEO‑friendly internal links. Preview and iterate instantly.</p>
       </div>
       <div class="right-panel">
         <form id="seo-form">
@@ -32,7 +33,7 @@
       </div>
     </section>
 
-    <!-- SECTION 2: Output -->
+    <!-- SECTION 2  OUTPUT -->
     <section class="section output-section hidden" id="output-section">
       <div class="split">
         <div class="box raw-box">
@@ -44,7 +45,7 @@
           <iframe id="preview" sandbox=""></iframe>
         </div>
       </div>
-      <div class="button-row output-buttons">
+      <div class="output-buttons">
         <button id="btn-back" class="btn btn-retry">Try Again</button>
       </div>
     </section>
